Выполнена подготовка к работе: загружены шрифты, сделана первичная разметка

--- a/source/index.html
+++ b/source/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Smart Device</title>
-  <link rel="stylesheet" href="css/style.css">
-
-</head>
-<body>
-  <h1>Печатные платы</h1>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Smart Device</title>
+    <link rel="stylesheet" href="css/style.css">
+    <!-- здесь будут добавлены шрифты -->
+  </head>
+  <body>
+    <header>
+      <nav>
+      </nav>
+    </header>
+    <main>
+      <h1 class="visually-hidden">Печатные платы</h1>
+      <section class="start">
+      </section>
+      <section class="adv">
+      </section>
+      <section class="company">
+      </section>
+      <section class="goods">
+      </section>
+      <section class="question">
+      </section>
+    </main>
+    <footer>
+    </footer>
+  </body>
 </html>
