--- a/source/index.html
+++ b/source/index.html
@@ -5,12 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Smart Device</title>
-    <link rel="stylesheet" href="css/style.css">
-    <!-- здесь будут добавлены шрифты -->
+    <link rel="stylesheet" href="css/style.min.css">
+    <!-- шрифты woff будут заменены на woff2-->
+    <link rel="preload" href="fonts/robotomedium.woff" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/robotocondensedregular.woff" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/robotocondensedbold.woff" as="font" crossorigin="anonymous">
+    <link rel="preload" href="fonts/ptmonoregular.woff" as="font" crossorigin="anonymous">
   </head>
-  <body>
-    <header>
-      <nav>
+  <body class="page-body">
+    <header class="page-header">
+      <div class="page-header__logo">
+        <div class="page-header__logo-img">
+          <img src="img/circuit.png" width="52" height="52" alt="Логотип Smart Device">
+        </div>
+        <div class="page-header__logo-text">
+          <span class="page-header__logo-text-big">Smart Device</span>
+          <span class="page-header__logo-text-small">умные технологии</span>
+        </div>
+      </div>
+      <div class="page-header__burger">
+        Бургер?
+      </div>
+      <nav class="main-nav">
+        <div class="main-nav__email">
+          <img src="img/env.png" width="19" height="14" alt="Иконка для электронного адреса">
+          <span class="main-nav__email-text">info@sd.ru</span>
+        </div>
+        <div class="main-nav__phone">
+          <img src="img/phone.png" width="18" height="18" alt="Иконка для телефона">
+          <span class="main-nav__phone-text">+7 (495) 000 52 52</span>
+        </div>
+        <div class="main-nav__button">
+          <a href="modal-phone" class="button">Заказать звонок</a>
+        </div>
       </nav>
     </header>
     <main>
@@ -28,5 +55,7 @@
     </main>
     <footer>
     </footer>
+    <div id="modal-phone">
+    </div>
   </body>
 </html>
