--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
   <body class="page-body">
     <div class="pic-container">
       <header class="page-header">
-        <div class="page-header__logo">
+        <a class="page-header__logo">
           <div class="page-header__logo-img">
             <img src="img/circuit.png" width="52" height="52" alt="Логотип Smart Device">
           </div>
@@ -23,22 +23,16 @@
             <span class="page-header__logo-text-big">Smart Device</span>
             <span class="page-header__logo-text-small">Умные технологии</span>
           </div>
-        </div>
+        </a>
         <div class="page-header__burger">
           Бургер?
         </div>
         <nav class="main-nav">
-          <div class="main-nav__email">
-            <img src="img/env.png" width="19" height="14" alt="Иконка для электронного адреса">
-            <span class="main-nav__email-text">info@sd.ru</span>
-          </div>
-          <div class="main-nav__phone">
-            <img src="img/phone.png" width="18" height="18" alt="Иконка для телефона">
-            <span class="main-nav__phone-text">+7 (495) 000 52 52</span>
-          </div>
-          <div class="main-nav__button">
-            <a href="modal-phone" class="white-button button">Заказать звонок</a>
-          </div>
+          <a class="main-nav__email" href="mailto:info@sd.ru">info@sd.ru</a>
+          </a>
+          <a class="main-nav__phone" href="tel:+74950005252">+7 (495) 000 52 52
+          </a>
+          <a href="#modal-phone" class="main-nav__button button">Заказать звонок</a>
         </nav>
       </header>
       <section class="start">
@@ -67,7 +61,7 @@
     <footer class="footer">
       <div class="footer__about">
         <div class="footer__about-main">
-          <div class="footer__logo">
+          <a class="footer__logo" href="index.html">
             <div class="footer__logo-img">
               <img src="img/circuit.png" width="52" height="52" alt="Логотип Smart Device">
             </div>
@@ -75,7 +69,7 @@
               <span class="footer__logo-text-big">Service Device</span>
               <span class="footer__logo-text-small">Умные технологии</span>
             </div>
-          </div>
+          </a>
           <div class="footer__social">
             <a class="footer__social_fb">
               <span class="visually-hidden">Smart Device в Фейсбук</span>
