--- a/source/index.html
+++ b/source/index.html
@@ -142,8 +142,8 @@
               <div class="form__button-wrapper">
                 <button class="form__button button" type="submit" name="button" aria-label="Закрыть">Задать вопрос</button>
                 <div class="form__checkbox">
-                  <label class="form__checkbox_label">Я согласен на обработку персональных данных
-                    <input type="checkbox" name="agree" aria-label="Согласен" checked>
+                  <label class="form__checkbox_label">
+                    <input type="checkbox" name="agree" aria-label="Согласен" checked>Я согласен на обработку персональных данных
                   </label>
                 </div>
               </div>
@@ -206,9 +206,9 @@
           <p>Наш офис</p>
           <div class="footer__contact accordeon__items">
             <p>г. Мытищи, Олимпийский проспект, д.10</p>
-            <p>+7 (495) 589-40-50</p>
-            <p>+7 (925) 003-87-67</p>
-            <p>+7 (926) 926-080-79</p>
+            <a class="footer__contact-phone" href="tel:+74955894050">+7 (495) 589-40-50</a>
+            <a class="footer__contact-phone" href="tel:+79250038767">+7 (925) 003-87-67</a>
+            <a class="footer__contact-phone" href="tel:+792692608079">+7 (926) 926-080-79</a>
           </div>
         </div>
       </div>
@@ -235,8 +235,8 @@
             <div class="modal__button-wrapper">
               <button class="modal__button button" type="submit" name="modal-button">Отправить</button>
               <div class="modal__checkbox">
-                <label class="modal__checkbox_label">Я согласен на обработку персональных данных
-                    <input type="checkbox" name="modal-agree" aria-label="Согласен" checked>
+                <label class="modal__checkbox_label">
+                  <input type="checkbox" name="modal-agree" aria-label="Согласен" checked>Я согласен на обработку персональных данных
                 </label>
               </div>
             </div>
