Исправления по замечаниям тестировщика

--- a/source/index.html
+++ b/source/index.html
@@ -223,8 +223,8 @@
     </footer>
     <div class="modal modal_hide" id="modal-phone">
       <div class="modal__wrapper">
-          <h2>Закажите звонок</h2>
-          <p>Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
+          <h2 class="modal__header">Закажите звонок</h2>
+          <p class="modal__par">Оставьте контакты, мы проконсультируем вас бесплатно в удобное время</p>
           <form class="modal__form" action="http://echo.htmlacademy.ru" method="post">
             <div class="modal__inputs">
               <input id="modal-name" type="text" name="modal-name" placeholder="Имя" aria-label="Имя" required>
